[package]
name = "heidi-jwt"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
josekit = { git = "https://github.com/ubamrein/josekit-rs.git", default-features = false, features = [
    "rustcrypto",
] }
base64 = "0.22.1"
x509-cert = "0.2.5"
tracing = "0.1.41"
itertools = "0.14.0"
chrono = "0.4"
